feat: simplify to single SDK package containing both runtime and development files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,38 +44,25 @@ jobs:
         echo "VERSION=$version" >> $env:GITHUB_OUTPUT
       shell: powershell
 
-    - name: Create release packages
+    - name: Create SDK package
       id: create_package
       run: |
         $projectName = "but"
         $version = "${{ steps.get_version.outputs.VERSION }}"
         $platform = "windows"
         $arch = "${{ matrix.platform }}"
-        $runtimeZipName = "$projectName-$version-$platform-$arch.zip"
         $sdkZipName = "$projectName-sdk-$version-$platform-$arch.zip"
-
-        # ===== Create Runtime Package =====
-        New-Item -ItemType Directory -Path "release-runtime" -Force
-
-        # Find and copy the built executable and test suite DLLs
-        Get-ChildItem -Path "target" -Recurse -Filter "but.exe" | Where-Object { $_.Directory.Name -eq "bin" } | Copy-Item -Destination "release-runtime/"
-        Get-ChildItem -Path "target" -Recurse -Filter "*.dll" | Where-Object { $_.Directory.Name -eq "bin" } | Copy-Item -Destination "release-runtime/"
-
-        # Add documentation files if they exist
-        if (Test-Path "README.md") { Copy-Item "README.md" "release-runtime/" }
-        if (Test-Path "LICENSE") { Copy-Item "LICENSE" "release-runtime/" }
-        if (Test-Path "CHANGELOG.md") { Copy-Item "CHANGELOG.md" "release-runtime/" }
-
-        # Create the runtime zip file
-        Compress-Archive -Path "release-runtime/*" -DestinationPath $runtimeZipName
-        Remove-Item -Recurse -Force "release-runtime"
-        echo "Created runtime package: $runtimeZipName"
 
         # ===== Create SDK Package =====
         New-Item -ItemType Directory -Path "release-sdk" -Force
+        New-Item -ItemType Directory -Path "release-sdk/bin" -Force
         New-Item -ItemType Directory -Path "release-sdk/lib" -Force
         New-Item -ItemType Directory -Path "release-sdk/include" -Force
         New-Item -ItemType Directory -Path "release-sdk/examples" -Force
+
+        # Copy runtime executable and example DLLs
+        Get-ChildItem -Path "target" -Recurse -Filter "but.exe" | Where-Object { $_.Directory.Name -eq "bin" } | Copy-Item -Destination "release-sdk/bin/"
+        Get-ChildItem -Path "target" -Recurse -Filter "*.dll" | Where-Object { $_.Directory.Name -eq "bin" } | Copy-Item -Destination "release-sdk/bin/"
 
         # Copy static library
         Get-ChildItem -Path "target" -Recurse -Filter "but.lib" | Where-Object { $_.Directory.Name -eq "lib" } | Copy-Item -Destination "release-sdk/lib/"
@@ -96,17 +83,9 @@ jobs:
         Remove-Item -Recurse -Force "release-sdk"
         echo "Created SDK package: $sdkZipName"
 
-        # Output filenames for use in release step
-        echo "RUNTIME_ZIP_NAME=$runtimeZipName" >> $env:GITHUB_OUTPUT
+        # Output filename for use in release step
         echo "SDK_ZIP_NAME=$sdkZipName" >> $env:GITHUB_OUTPUT
       shell: powershell
-
-    - name: Upload runtime package
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ steps.create_package.outputs.RUNTIME_ZIP_NAME }}
-        path: ${{ steps.create_package.outputs.RUNTIME_ZIP_NAME }}
-        retention-days: 1  # Short retention since we'll create a release
 
     - name: Upload SDK package
       uses: actions/upload-artifact@v4
@@ -137,35 +116,53 @@ jobs:
 
           Basic Unit Test (BUT) is a C unit test framework with setjmp/longjmp-based exception handling.
 
-          ### Runtime Packages
-          Download these to run existing test suites:
-          - `but-${{ github.ref_name }}-windows-x64.zip` - 64-bit Windows version
-          - `but-${{ github.ref_name }}-windows-x86.zip` - 32-bit Windows version
+          ### Downloads
+          Complete SDK packages (includes everything you need to develop and run test suites):
+          - `but-sdk-${{ github.ref_name }}-windows-x64.zip` - 64-bit Windows
+          - `but-sdk-${{ github.ref_name }}-windows-x86.zip` - 32-bit Windows
 
-          **Contents**: `but.exe` test driver and example test suite DLLs
-
-          ### SDK Packages
-          Download these to develop your own test suites:
-          - `but-sdk-${{ github.ref_name }}-windows-x64.zip` - 64-bit Windows SDK
-          - `but-sdk-${{ github.ref_name }}-windows-x86.zip` - 32-bit Windows SDK
-
-          **Contents**:
-          - `but.lib` - Static library to link with your test suites
-          - Header files (but.h, but_assert.h, exception.h, etc.)
-          - Example test suite source code
+          ### Package Contents
+          Each SDK package includes:
+          - **Runtime**: `bin/but.exe` - Test driver executable
+          - **Development**: `lib/but.lib` - Static library for linking
+          - **Headers**: `include/*.h` - All public headers (but.h, but_assert.h, exception.h, etc.)
+          - **Examples**: Example test suite DLLs and source code
+          - **Documentation**: README, LICENSE
 
           ### Quick Start
 
-          **Using the Runtime:**
-          1. Download and extract the runtime package
-          2. Run: `but.exe your_test_suite.dll`
+          **1. Extract the SDK:**
+          ```
+          unzip but-sdk-${{ github.ref_name }}-windows-x64.zip
+          cd but-sdk-${{ github.ref_name }}-windows-x64
+          ```
 
-          **Developing Test Suites:**
-          1. Download and extract the SDK package
-          2. Include headers: `#include <but.h>`, `#include <but_assert.h>`
-          3. Write tests using `BUT_TEST` macros
-          4. Compile as DLL with `/DDLL_BUILD` and link against `but.lib`
-          5. Run with `but.exe your_test_suite.dll`
+          **2. Try the examples:**
+          ```
+          bin\but.exe bin\exception_butts.dll
+          ```
+
+          **3. Write your own tests:**
+          ```c
+          #include <but.h>
+          #include <but_assert.h>
+
+          BUT_TEST("My Test", my_test) {
+              BUT_ASSERT_EQ_INT(42, compute_answer());
+          }
+
+          BUT_SUITE_BEGIN(my_suite)
+              BUT_SUITE_ADD(my_test)
+          BUT_SUITE_END;
+
+          BUT_GET_TEST_SUITE("My Tests", my_suite);
+          ```
+
+          **4. Build and run:**
+          ```cmd
+          cl /I"path\to\sdk\include" /DDLL_BUILD my_tests.c /LD /link "path\to\sdk\lib\but.lib"
+          path\to\sdk\bin\but.exe my_tests.dll
+          ```
         draft: false
         prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') || startsWith(github.ref_name, 'v0.') }}
       env:
